--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,16 @@
 <h1> Create A New Article </h1>
 
+<% if @article.errors.any? %>
+<h3> Please correct the following errors </h3>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+  <li>
+    <%= msg %>
+  </li>
+  <% end %>
+</ul>
+<% end %>
+
 <%= form_for @article do |f| %>
 
 <p>
