--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,3 +3,5 @@
 </p>
 <p> Description: <%= @article.description %>
 </p>
+<%= link_to "Edit This Article", edit_article_path %> |
+<%= link_to "Back To Index", articles_path(@article) %>
