--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,3 +1,5 @@
-<h1>This is home page</h1>
-<%= link_to "Alpha Blog", articles_path %> |
-<%=link_to 'About', about_path %>
+<div class="center jumbotron">
+  <h1> Welcome To NoteBook</h1>
+  <p>Best place to create,save and share your thoughts with like minded people online</p>
+  <p><a class="btn btn-primary btn-lg" href="#" role="button">Sign Up Now</a></p>
+</div>
