--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,4 +1,4 @@
-$navbar-default-bg: #08088A;
+$navbar-default-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
@@ -16,4 +16,40 @@ $navbar-default-bg: #08088A;
 }
 .center {
   text-align: center;
+}
+.jumbotron {
+  background-image: asset-url('notebook-background.jpg');
+  background-size: cover;
+  height: 550px;
+}
+.jumbotron h1{
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+.jumbotron p{
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+.btn-xlarge{
+  font-size: 1.7em;
+  #background-color: black;
+}
+.footer{
+  margin-top: 45px;
+  padding-top: 5px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
+}
+.footer ul{
+  margin-top: -5px;
+  float: right;
+  list-style: none;
+}
+.footer ul li{
+  float: left;
+  margin-left: 15px;
 }
