more changes in listing page style

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -25,8 +25,8 @@
   </div>
     </div>
 <% end %>
-    <div class="col-xs-4 col-xs-offset-4">
-    [<%= link_to "Cancel and return to story listing", articles_path %>]
+    <div class="col-xs-4 col-xs-offset-5">
+    <%= link_to "Return To Story Bulletin Board", articles_path, class: "btn btn-s btn-primary" %>
     </div>
   </div>
 </div>
