--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,6 +56,12 @@ $navbar-default-bg: black;
 .alert .close{
   right: 0px !important;
 }
+.article-info{
+ border-top: 1px solid #eaeaea;
+ padding-top: 15px;
+  font-weight: bold;
+  font-size: 1.2em;
+}
 .article-actions{
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
