--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,6 +8,12 @@
         </div>
         <div class="article-body">
           <%= truncate(article.description, length: 50) %>
+          <div class="article-info">
+            <small> Created by : <%= article.user.username if article.user %>
+              <%= time_ago_in_words(article.created_at) %> ago,
+             Last updated : <%= time_ago_in_words(article.updated_at) %> ago.
+            </small>
+          </div>
         </div>
          <div class="article-actions">
          <%= link_to "Edit this story", edit_article_path(article), class: "btn btn-xs btn-primary" %>
