--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,8 @@
 <h1 align="center"> Story Bulletin Board </h1>
-  <%= render 'articles', obj: @articles %>
-
+<div align="center">
+  <%= will_paginate %>
+</div>
+<%= render 'articles', obj: @articles %>
+<div align="center">
+  <%= will_paginate %>
+</div>
