added ui restriction

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
   <h1> Welcome To NoteBook</h1>
   <p>Best place to create,save and share your thoughts with like minded people online</p>
-  <p><a class="btn btn-primary btn-lg btn-xlarge" href="#" role="button">Sign Up Now</a></p>
+  <p><a class="btn btn-primary btn-lg btn-xlarge" href="/signup" role="button">Sign Up Now</a></p>
 </div>
