--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,10 +13,17 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><%= link_to "Stories", articles_path %></li>
-        <li><%= link_to "Story Tellers", users_path %></li>
+
+
+      <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
+        <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search Stories ...">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
+        <li><%= link_to "Stories", articles_path %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -29,16 +36,7 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
-        <% end %>
-      </ul>
-      <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <% if logged_in? %>
+        <li><%= link_to "Story Tellers", users_path %></li>
         <li><%= link_to 'Logout', logout_path, method: :delete %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
