--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -37,7 +37,7 @@
         <li><%= link_to "Story Tellers", users_path %></li>
         <li><%= link_to 'Logout', logout_path, method: :delete %></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Profile <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
             <li><%= link_to "View Profile", user_path(current_user) %> </li>
