--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,25 +25,20 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Create New Story", new_article_path %></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><%= link_to "Write New Story", new_article_path %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">More Actions</a></li>
           </ul>
         </li>
         <li><%= link_to "Story Tellers", users_path %></li>
-        <li><%= link_to 'Logout', logout_path, method: :delete %></li>
+
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
             <li><%= link_to "View Profile", user_path(current_user) %> </li>
-            <li><a href="#">Something else here</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><%= link_to 'Logout', logout_path, method: :delete %></li>
             <% else %>
             <li><%= link_to 'Log in', login_path %></li>
             <li><%= link_to 'Sign Up', signup_path %></li>
